--- a/css/style.css
+++ b/css/style.css
@@ -15,14 +15,6 @@
     text-align: left;
    
   }
-  /*
-.container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1320px
-);*/
 nav{
   background-color: #28A745;
 }
@@ -49,4 +41,7 @@ div p{
 .card{
   margin-top: 1.5rem;
   border: 0cap;
+}
+img:hover {
+  color:hotpink;
 }
